--- a/nasa-mission-control/public/index.html
+++ b/nasa-mission-control/public/index.html
@@ -88,6 +88,10 @@
       This is not an official site and is not affiliated with NASA or SpaceX in any way. For educational purposes only.
     </div>
   </footer>
+
+  <video autoplay muted loop id="spacevideo">
+    <source src="videos/earth.mp4"" type="video/mp4">
+  </video>
 </body>
 
 </html>
